@startuml
title Telecommande d'appareils

'''classes
class Telecommande {
    + Telecommande()
    + ajouterAppareil(Appareil a)
    + activerAppareil(int indiceAppareil)
    + desactiverAppareil(int indiceAppareil)
    + activerTout()
    + toString():String
}

Interface Appareil {
    + allumer()
    + eteindre()
}

class Hifi {
    - son : int
    + allumer()
    + eteindre()
    + toString():String
}

class Lampe {
    - nom : String
    - allume : boolean
    + Lampe(String nom)
    + allumer()
    + eteindre()
    + toString():String
}

class Television {
    - son : int
    + allumer()
    + eteindre()
    + toString():String
}

'''relations
Telecommande "1" --> "*" Appareil : - appareils : List<>
Appareil <|.. Hifi
Appareil <|.. Lampe
Appareil <|.. Television

@enduml